# cortex

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  config.example.toml  cortex-docker.sh  docker-compose.multi-project.yml  docker-compose.yml  install.sh
.claude/commands/: cortex-task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: requirement.md
migrations/: 001_init.sql  002_add_fts.sql  003_add_imports.sql
scripts/: check-templates-sync.sh  sync-templates.sh
src/: config.rs  error.rs  lib.rs  main.rs  report.rs  update.rs
src/embeddings/: local.rs
src/indexer/: db.rs  mod.rs
src/mcp_server/: error.rs  mod.rs  models.rs  server.rs
src/models/: import.rs  mod.rs  symbol.rs
src/parser/: java_parser.rs  js_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  ts_parser.rs
src/query/: content.rs  context.rs  document.rs  imports_query.rs  keyword.rs  mod.rs  references.rs  search.rs  semantic.rs
src/scanner/: walker.rs
src/watcher/: file_watcher.rs
templates/: claude-md.md  cortex-task.md
