[package]
name = "cortex"
version = "0.2.0"
edition = "2021"
description = "Local-first code context engine with MCP integration"
license = "MIT"

[[bin]]
name = "cortex"
path = "src/main.rs"

[features]
default = []
embeddings = ["fastembed", "lancedb"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Vector search (optional — requires pkg-config + libssl-dev)
lancedb = { version = "0.27", optional = true }

# Local embeddings (optional — requires pkg-config + libssl-dev)
fastembed = { version = "5", optional = true }

# File watching
notify = "7"

# Directory walking
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# MCP
rmcp = { version = "1", features = ["transport-io"] }
schemars = "1"

# Utilities
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
